infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  posts-depl
spec:
  selector:
    matchLabels:
      app: posts
  replicas: 1
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
      - name:  posts
        image:  pdtg/posts:0.0.1
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
