infra/k8s/client-depl.yaml
# DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  client-depl
spec:
  selector:
    matchLabels:
      app: client
  replicas: 1
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name:  client
        image:  pdtg/client
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 900Mi
---
#CLUSTER IP SERVICE
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  type: ClusterIP
  ports:
  - name: client
    protocol: TCP
    port: 3000
    targetPort: 3000
