infra/k8s/comments-depl.yaml
# DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  comments-depl
spec:
  selector:
    matchLabels:
      app: comments
  replicas: 1
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
      - name:  comments
        image:  pdtg/comments
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
---
#CLUSTER IP SERVICE
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  type: ClusterIP
  ports:
  - name: comments
    protocol: TCP
    port: 4001
    targetPort: 4001
