infra/k8s/event-bus-depl.yaml
# DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  event-bus-depl
spec:
  selector:
    matchLabels:
      app: event-bus
  replicas: 1
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
      - name:  event-bus
        image:  pdtg/event-bus
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
---
#CLUSTER IP SERVICE
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  type: ClusterIP
  ports:
  - name: event-bus
    protocol: TCP
    port: 4005
    targetPort: 4005
