infra/k8s/moderation-depl.yaml
# DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  moderation-depl
spec:
  selector:
    matchLabels:
      app: moderation
  replicas: 1
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
      - name:  moderation
        image:  pdtg/moderation
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
---
#CLUSTER IP SERVICE
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  type: ClusterIP
  ports:
  - name: moderation
    protocol: TCP
    port: 4003
    targetPort: 4003
