infra/k8s/query-depl.yaml
# DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  query-depl
spec:
  selector:
    matchLabels:
      app: query
  replicas: 1
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name:  query
        image:  pdtg/query
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
---
#CLUSTER IP SERVICE
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  type: ClusterIP
  ports:
  - name: query
    protocol: TCP
    port: 4002
    targetPort: 4002
